--- a/package.json
+++ b/package.json
@@ -6,8 +6,5 @@
   "devDependencies": {
     "jest": "^29.7.0"
   },
-  "dependencies": {
-    "axios": "^1.7.7",
-    "dotenv": "^16.4.5"
-  }
+  "dependencies": {}
 }
